carousel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carousel
  labels:
    app.kubernetes.io/name: carousel
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: carousel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: carousel
    spec:
      containers:
      - name: carousel
        image: registry.incompletion.ist/disimprovement/carousel:0.0.11
        args:
          - /config/config.json
        ports:
          - containerPort: 8888
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: "/data"
            name: storage
      imagePullSecrets:
        - name: pull-secret
      volumes:
        - name: config
          configMap:
            name: config
            items:
              - key: config.json
                path: config.json
        - name: storage
          persistentVolumeClaim:
            claimName: storage
