carousel/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: carousel
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: carousel
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
