carousel/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carousel
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: carousel.incompletion.ist
    cert-manager.io/private-key-size: "4096"
    #nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    #nginx.ingress.kubernetes.io/auth-tls-secret: "cert-manager/incompletionist-root-ca"
    #nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    #nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - carousel.incompletion.ist
      secretName: carousel-tls
  rules:
    - host: carousel.incompletion.ist
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: carousel
              port:
                number: 8888
